math fix on mobile

--- a/assets/stylesheets/post.scss
+++ b/assets/stylesheets/post.scss
@@ -57,7 +57,7 @@ article {
         color: #585858;
     }
 
-    .mjx-container {
+    .MJXc-display {
         overflow-x: scroll;
     }
 
